[tool.poetry]
name = "py-aiger-bv"
readme="README.md"
version = "4.7.3"
description = "A python library for manipulating sequential and-inverter gates."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_bv" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^21"
funcy = "^1.12"
py-aiger = "^6.1.16"
pyrsistent = "^0.18"

[tool.poetry.dev-dependencies]
hypothesis_cfg = {git = "git://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "^5.0.0"
pytest-cov = "^2.7"
pytest-flake8 = "^1.0"
pytest-xdist = "^2.0.0"
coverage = "^6.0.0"
pdoc3 = "^0.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
