[tool.poetry]
name = "py-aiger-bv"
readme="README.md"
version = "4.7.6"
description = "A python library for manipulating sequential and-inverter gates."
authors = ["Marcell Vazquez-Chanlatte <mvc@linux.com>"]
license = "MIT"
packages = [
    { include = "aiger_bv" },
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22"
funcy = "^1.12"
py-aiger = "^6.1.16"
pyrsistent = "^0.19"

[tool.poetry.dev-dependencies]
hypothesis_cfg = {git = "https://github.com/mvcisback/hypothesis-cfg.git"}
hypothesis = "^6.0.0"
pytest-xdist = "^3.0.0"
pdoc3 = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
